# socrates

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HISTORY.md  LICENSE  NOTICE  PROJECT.md  README.md  build.rs  greeting.txt
.github/: CLEANUP_BRANCHES  RELEASE_NOTES.md  RELEASE_TAG  dependabot.yml
.github/workflows/: bench.yml  ci.yml  cleanup.yml  release.yml
bench/: CLAUDE.md  RESULTS.md  ab.py  arith_loop.fable  arith_loop.soc  bench_call_return.fable  bench_call_return.soc  bench_deque.fable  bench_deque.soc  bench_display.fable  bench_display.soc  bench_env_maps.fable  bench_env_maps.soc  bench_join_heavy.fable  bench_join_heavy.soc  bench_json.soc  bench_list_churn.fable  bench_list_churn.soc  bench_lists.fable  bench_lists.soc  bitwise_masks.fable  bitwise_masks.soc  closure_churn.fable  closure_churn.soc  enum_match.fable  enum_match.soc  float_loop.fable  float_loop.soc  for_range.soc  list_ops.fable  list_ops.soc  map_ops.fable  map_ops.soc  method_dispatch.fable  method_dispatch.soc  run.sh  string_build.fable  string_build.soc  string_interp.fable  string_interp.soc
bench/.claude/: CLAUDE.md
book/: 01-getting-started.md  02-fundamentals.md  03-functions-and-closures.md  04-data.md  05-collections-and-strings.md  06-error-handling.md  06-under-the-hood.md  07-modules.md  07-v02-features.md  08-glue.md  08-stdlib.md  09-toolchain.md  09-workers.md  10-field-test.md  10-under-the-hood.md  11-toolchain.md  12-idioms.md  README.md
demos/: CLAUDE.md  NOTES.md  README.md  STYLE.md
demos/.claude/: CLAUDE.md
demos/bloom/: README.md  bloom.fable  guardrails.fable  guardrails.soc  hash.fable  hash.soc  main.fable  main.soc  spec.fable  spec.soc  words.fable
demos/checkers/: README.md  board.fable  board.soc  engine.fable  main.fable  main.soc  spec.fable  spec.soc  zobrist.fable  zobrist.soc
demos/csvql/: README.md  cities.csv  main.fable  main.soc  query.fable  query.soc  table.fable  table.soc
demos/dungeon/: README.md  dungeon.fable  dungeon.soc  main.fable  main.soc  path.fable  path.soc  spec.fable  spec.soc
demos/glcube/: README.md  cube.fable  cube.soc  main.fable  main.soc  main_metal.fable  main_metal.soc  main_vulkan.fable  main_vulkan.soc  spec.fable  spec.soc
demos/lisp/: README.md  eval.fable  eval.soc  main.fable  main.soc  reader.fable  reader.soc  spec.fable  spec.soc
demos/mdsite/: README.md  main.fable  main.soc  markdown.fable  site.fable  site.soc  spec.fable  spec.soc
demos/parmandel/: README.md  main.fable  main.soc  row_worker.fable  row_worker.soc
demos/plot/: README.md  chart.fable  chart.soc  checks.fable  checks.soc  main.fable  main.soc  svg.fable  svg.soc
demos/png/: README.md  bits.fable  bits.soc  crc.fable  crc.soc  image.fable  main.fable  main.soc  png.fable  png.soc  spec.fable  spec.soc  zlib.soc
demos/regex/: README.md  engine.fable  engine.soc  main.fable  main.soc  sample.txt  syntax.fable  syntax.soc
demos/reversi/: README.md  bits.fable  bits.soc  board.fable  board.soc  main.fable  main.soc  spec.fable  spec.soc
demos/spectra/: README.md  checks.fable  checks.soc  dsp.fable  dsp.soc  guardrails.fable  guardrails.soc  main.fable  main.soc
demos/spreadsheet/: README.md  aggregates.fable  aggregates.soc  budget.sheet  checks.fable  checks.soc  cycles.sheet  formula.fable  formula.soc  main.fable  main.soc  sheet.fable  sheet.soc  stats.sheet
demos/sudoku/: README.md  board.fable  main.fable  main.soc  solver.fable  spec.fable  spec.soc
demos/swarm/: README.md  crunch_worker.fable  crunch_worker.soc  main.fable  main.soc
demos/synthwave/: README.md  checks.fable  checks.soc  guardrails.fable  guardrails.soc  main.fable  main.soc  synth.fable  synth.soc  wav.fable  wav.soc
demos/wfc/: README.md  main.fable  main.soc  rules.fable  rules.soc  samples.fable  samples.soc  spec.fable  spec.soc  wfc.fable  wfc.soc
docs/: ARCHITECTURE.md  CLAUDE.md  RELEASING-macOS.md  SPEC.md
docs/.claude/: CLAUDE.md
docs/assets/: cuda_compute.fable  cuda_compute.soc  d3d12_compute.fable  d3d12_compute.soc  gl_triangle.soc  (+16 more)
examples/: adventure.fable  adventure.soc  algorithms.fable  algorithms.soc  brainfuck.fable  brainfuck.soc  json.fable  json.soc  life.fable  life.soc  loc.fable  loc.soc  mandelbrot.fable  mandelbrot.soc  raytracer.fable  raytracer.soc
ports/: CLAUDE.md  README.md
src/: ast.rs  builtins.rs  bundle.rs  bytecode.rs  check.rs  cl.rs  compiler.rs  cu.rs  diag.rs  dis.rs  dx.rs  fft.rs  fmt.rs  gpu.rs  jsonlite.rs  lexer.rs  lib.rs  lsp.rs  main.rs  modules.rs  mtl.rs  natives.rs  objc.rs  parser.rs  patterns.rs  repl.rs  source.rs  span.rs  stdlib.rs  testing.rs  token.rs  types.rs  value.rs  vk.rs  vm.rs  worker.rs
std/: crc.soc  deque.fable  fft.fable  fft.soc  flags.fable  glm.fable  glm.soc  iter.fable  iter.soc  json.fable  json.soc  lazy.soc  lists.fable  lists.soc  markdown.soc  path.soc  png.soc  set.fable  set.soc  strings.fable  svg.soc  wav.soc  zlib.soc
tests/: book_snippets.rs  build_bundle.rs  fmt_idempotency.rs  lsp_smoke.rs  module_search.rs  repl_imports.rs  spec_runner.rs  test_bless.rs
tools/: check_counts.sh  fft_crosscheck.py
(+456 files in other folders)
