[package]
name = "fable"
version = "0.6.0"
edition = "2021"
description = "The Fable programming language: statically typed, garbage collected, implemented from scratch with zero dependencies"
license = "Apache-2.0"
repository = "https://github.com/memmam/fable"

[[bin]]
name = "fable"
path = "src/main.rs"

[lib]
name = "fable"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1

# The DEFAULT build has zero dependencies (CI asserts `cargo tree` is one
# line). The `gpu` feature is the deliberate, quarantined exception: it pulls
# in wgpu (+ pollster to block on its futures) for `gpu.run(..)` compute.
[features]
default = []
gpu = ["dep:wgpu", "dep:pollster"]

[dependencies]
wgpu = { version = "30", optional = true }
pollster = { version = "1", optional = true }
