[package]
name = "fable"
version = "0.8.0"
edition = "2021"
description = "The Fable programming language: statically typed, garbage collected, implemented from scratch with zero dependencies"
license = "Apache-2.0"
repository = "https://github.com/memmam/fable"

[[bin]]
name = "fable"
path = "src/main.rs"

[lib]
name = "fable"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1

# The DEFAULT build has zero dependencies (CI asserts `cargo tree` is one
# line). The `gpu` feature is the deliberate, quarantined exception: it pulls
# in wgpu (+ pollster to block on its futures) for `gpu.run(..)` compute.
# The `gl` feature is a *different* kind of exception: it adds zero Cargo
# dependencies (no `dep:` entries) — it's raw FFI to system libraries (X11
# linked normally, GL/GLX `dlopen`ed at runtime), so `cargo tree` stays one
# line with or without it. See src/window/ for the `window` namespace.
# `metal` is the same zero-dependency shape as `gl` (raw FFI to Metal.
# framework/QuartzCore.framework, both linked normally, no `dep:` entries) --
# a *sibling* of `gl`, not nested under or replacing it: both are
# independently toggleable and combinable on macOS (`--features gl,metal`
# builds a single binary that can open either kind of window), matching the
# standing "Metal ships additive alongside OpenGL/CGL, never replacing it"
# principle in CLAUDE.md. On Linux/Windows `metal` compiles to nothing.
[features]
default = []
gpu = ["dep:wgpu", "dep:pollster"]
gl = []
metal = []
# Native Vulkan (Linux/Windows compute; Linux/X11 windowing, additive
# alongside gl), raw dlopen FFI -- zero deps, like gl/metal.
vulkan = []

[dependencies]
wgpu = { version = "30", optional = true }
pollster = { version = "1", optional = true }
