[package]
name = "fable"
version = "0.8.0"
edition = "2021"
description = "The Fable programming language: statically typed, garbage collected, implemented from scratch with zero dependencies"
license = "Apache-2.0"
repository = "https://github.com/memmam/fable"

[[bin]]
name = "fable"
path = "src/main.rs"

[lib]
name = "fable"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1

# EVERY build has zero dependencies — no [dependencies] section at all, and
# CI asserts `cargo tree` is one line for the default and for every feature
# set. (wgpu + pollster, once the sole quarantined exception behind a `gpu`
# feature, were deleted when the native-backend coverage condition was met —
# see CLAUDE.md's roadmap.) The features below add zero Cargo dependencies
# (no `dep:` entries): they are raw FFI to system libraries. The `gl`
# feature links X11 normally and `dlopen`s GL/GLX at runtime; see
# src/window/ for the `window` namespace.
# `metal` is the same zero-dependency shape as `gl` (raw FFI to Metal.
# framework/QuartzCore.framework, both linked normally, no `dep:` entries) --
# a *sibling* of `gl`, not nested under or replacing it: both are
# independently toggleable and combinable on macOS (`--features gl,metal`
# builds a single binary that can open either kind of window), matching the
# standing "Metal ships additive alongside OpenGL/CGL, never replacing it"
# principle in CLAUDE.md. On Linux/Windows `metal` compiles to nothing.
[features]
default = []
gl = []
metal = []
# Native Vulkan (Linux/Windows compute; Linux/X11 windowing plus the
# Windows windowing scaffolding, additive
# alongside gl), raw dlopen FFI -- zero deps, like gl/metal.
vulkan = []
# Native OpenCL compute (Linux/Windows), raw dlopen FFI -- zero deps, like
# gl/metal/vulkan. Ingests SPIR-V in the OpenCL profile (SPEC section 7.2);
# vulkan and cuda take precedence when also enabled.
opencl = []
# Native CUDA compute (Linux/Windows), raw dlopen FFI to the NVIDIA driver
# (libcuda) -- zero deps; no CUDA toolkit involved. Takes PTX text through
# gpu.run (SPEC section 7.2); vulkan takes precedence when both are enabled.
cuda = []
# Native Direct3D 12 compute (Windows), COM-vtable FFI over runtime-loaded
# d3d12/dxgi/d3dcompiler_47 system DLLs -- zero deps, no SDK. Takes HLSL
# source through gpu.run (SPEC section 7.2); always has a device thanks to
# WARP; vulkan takes precedence, d3d12 beats cuda/opencl.
d3d12 = []
